--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -31,21 +31,19 @@
 {{ end }}<!---->
 {{ end }}<!---->
 
-<html
-  class="not-ready text-sm lg:text-base"
-  style="--bg: {{ $.Scratch.Get `bg_color` }}"
-  lang="{{ site.LanguageCode }}"
->
-  {{ partial "head.html" . }}
-  <body class="text-black duration-200 ease-out dark:text-white">
-    {{ partial "header.html" . }}
+<html class="not-ready text-sm lg:text-base" style="--bg: {{ $.Scratch.Get `bg_color` }}"
+  lang="{{ site.LanguageCode }}">
+{{ partial "head.html" . }}
 
-    <main
-      class="prose prose-neutral relative mx-auto min-h-[calc(100%-10rem)] max-w-3xl px-8 pt-16 pb-24 dark:prose-invert"
-    >
-      {{ block "main" . }}{{ end }}
-    </main>
+<body class="text-black duration-200 ease-out dark:text-white">
+  {{ partial "header.html" . }}
 
-    {{ partial "footer.html" . }}
-  </body>
+  <main
+    class="prose prose-neutral relative mx-auto min-h-[calc(100%-10rem)] max-w-3xl px-8 pt-16 pb-24 dark:prose-invert">
+    {{ block "main" . }}{{ end }}
+  </main>
+
+  {{ partial "footer.html" . }}
+</body>
+
 </html>
